# nlp-classifier-public-data

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cost_analysis.md  dataset_sources.md  decisions.md  model_card.md
scripts/: evaluate.py  prepare_data.py  train.py
services/api/: deps.py  main.py  schemas.py
tests/: test_api.py  test_data.py
